Began Mobile Scaling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
     </div>
     <div id="main-page-buttons">
             <button id = "loginModal">STEAM LOGIN</button>
-            <p style="color: white; font-size: larger; margin-top: 1rem;"> OR </p>
+            <p id="orText" style="color: white; font-size: larger; margin-top: 1rem;"> OR </p>
             <button id = "loginModal2">ALT LOGIN</button>
             <div id = "modal" class = "modal">
                 <div class = "modal-content">
