--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,6 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <!-- Ensures our viewport is properly set to scale -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> <%= title %> </title>
     <!-- TODO: Add Icon for Tab Bar -->
     <!-- TODO: Prune/Create specific Headers to not load all the scripts when needed -->
