--- a/public/css/roomChoice.css
+++ b/public/css/roomChoice.css
@@ -13,7 +13,11 @@ body {
 }
 
 /* Set most of the text to white */
-h1, h2, a, p, label {
+h1,
+h2,
+a,
+p,
+label {
     color: white;
 }
 
@@ -42,7 +46,7 @@ h1, h2, a, p, label {
 
 /* Specific Hover color for links */
 a:hover {
-    color:#9FE544;
+    color: #9FE544;
 }
 
 /* Generic Green Button by Default */
@@ -152,6 +156,8 @@ button:hover {
     .background-box {
         max-width: 100vw;
         box-shadow: none;
+        margin-top: 0;
+        padding: 6vh;
     }
 
     /* Ensure we follow the intended mobile design w/ a singular page color. */
@@ -193,5 +199,13 @@ button:hover {
     #back {
         top: 0px;
         font-size: 30px;
+    }
+
+    .selectorButtons {
+        padding: 2vh 4vw;
+    }
+
+    div#roomChoiceButtons {
+        margin-top: 3vh;
     }
 }
