--- a/views/alt-login.ejs
+++ b/views/alt-login.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header.ejs', {title: `What Can We Play Today?`, stylesheet: `generalStyles.css`}) %>
+<%- include('partials/header.ejs', {title: `What Can We Play Today?`, stylesheet: `altLogin.css`}) %>
 <%- include('partials/navbarBack.ejs', {linkToPage: `/`}) %>
 
 <div class="gradient-background">
