--- a/views/alt-login.ejs
+++ b/views/alt-login.ejs
@@ -16,7 +16,7 @@
             <br>
             <input type="text" id="userId" name="userId">
             <br>
-            <button type="submit"> ALT LOGIN </button>
+            <button id="altUserLogin" type="submit"> ALT LOGIN </button>
         </form>
     </div>
 </div>
