--- a/views/empty-room.ejs
+++ b/views/empty-room.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header.ejs', {title: `What Can We Play Today?`, stylesheet: `generalStyles.css`}) %>
+<%- include('partials/header.ejs', {title: `What Can We Play Today?`, stylesheet: `emptyRoom.css`}) %>
 <%- include('partials/navbarLogout.ejs') %>
 
 <!-- This file and route are called EMPTY ROOM but it's only technically empty for the first user. After more users join it'll change dynamically with Javascript -->
