--- a/views/partials/navbarBackLogout.ejs
+++ b/views/partials/navbarBackLogout.ejs
@@ -5,6 +5,12 @@
       alt="What Can We Play Today Logo"
       src="/img/VecLogo.svg"
     /> -->
+    <!-- TODO: Add back button functionality -->
+    <!-- <div id="backItem">
+        <a href="<%= linkToPage %>">
+            <img id="backButton" src="/img/backButton.png" alt="back button"/>
+        </a>
+    </div> -->
     <a id="centralArea" href="/">
         <img
         id="logo"
