--- a/public/css/listPage.css
+++ b/public/css/listPage.css
@@ -105,6 +105,43 @@
     flex: 2;
 }
 
+.modal {
+    display: none;
+    position: fixed;
+    padding-top: 50%;
+    /* left: 100; */
+    width: 100%;
+    height: 30%;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-content {
+    display: flex;
+    background-color: var(--boxBackground);
+    /* justify-content: center;
+    align-items: center; */
+    color: white;
+    position: absolute;
+    width: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#modalTopArea {
+    display: flex;
+}
+
+#modalTopArea h2 {
+    flex: 9;
+}
+
+.back {
+    top: -20px;
+    font-size: 40px;
+}
+
 /* All components for the RIGHT hand column */
 #rightHandList {
     flex: 2;
@@ -274,7 +311,7 @@
     /* .gameImage {
         max-height: 15vh;
         /* max-height: 10vh; */
-    } */
+    /* } */
 
     #toGrab {
         align-items: normal;
@@ -289,5 +326,16 @@
         margin-right: auto;
         margin-top: auto;
         margin-bottom: auto;
+    }
+
+    .modal {
+        height: 100%;
+        padding-top: 10%;
+    }
+
+    .modal-content {
+        position: relative;
+        width: 100%;
+        transform: translate(-50%, -10%);
     }
 }
