--- a/views/list.ejs
+++ b/views/list.ejs
@@ -492,7 +492,14 @@ stylesheet: `listPage.css`}) %> <%- include('partials/navBarLogoutList.ejs') %>
             </div>
             <div id="${sharedGameNames[i]}Modal" class="modal">
                     <div class="modal-content">
-                        <p> ${sharedGameNames[i]} </p>
+                        <img src="${gameImages[i]}" alt="Image for ${sharedGameNames[i]}">
+                        <p class="gameTitleModal"> ${sharedGameNames[i]} </p>
+                        <div class="tagHolder">
+                            ${tempTag}
+                            ${tempPrice}
+                        </div>
+                        <p> Lorem Ipsum </p>
+                        <a href="${gameLinks[i]}" target="_blank"> Open on Steam </a>
                         <span id="back${i}" class="back"> &times; </span>
                     </div>
             </div>
