--- a/views/empty-room.ejs
+++ b/views/empty-room.ejs
@@ -111,7 +111,7 @@
     // Shows that the room code has been copied
     function showSuccess() {
         jSuites.notification({
-            name: 'Copied to Clipboard',
+            name: 'Copied to Clipboard!',
         });
     }
     
