--- a/views/index.ejs
+++ b/views/index.ejs
@@ -124,4 +124,10 @@
         window.location.href = "/";
     });
 
+    function showSuccess() {
+        jSuites.notification({
+            name: 'Copied to Clipboard',
+        });
+    }
+
 </script>
