--- a/views/alt-index.ejs
+++ b/views/alt-index.ejs
@@ -10,6 +10,9 @@
 
         <img id="logoHome" alt="What Can We Play Today Logo" src="/img/StandardImgLogo.png"/>
         <br>
+        <p> What Can We Play Today is a tool for finding shared games amongst Steam Gamers. If you're a Steam gamer yourself, you can use the Steam login button below to directly login with your Steam account OR use the Alternate Login if you know your Steam ID already. 
+        </p>
+        <p> Feel free to try the demo below to see how it all works! </p>
         <p style="color: white;"> <p>By using our site, you acknowledge that you have read and understand our <a href="/privacy-policy">PRIVACY POLICY</a></p>
         <br>
         
@@ -133,6 +136,7 @@
     function showLogout() {
         jSuites.notification({
             name: 'Successfully Logged Out!',
+            timeout: 6000,
         });
     }
     showLogout();
