Continued Mobile CSS optimizations

--- a/public/css/generalStyles.css
+++ b/public/css/generalStyles.css
@@ -195,4 +195,8 @@ button:hover {
         top: 0px;
         font-size: 30px;
     }
+
+    .jnotification-container {
+        max-width: 90vw;
+    }
 }
