--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -116,6 +116,7 @@
         max-width: 100vw;
         box-shadow: none;
         padding: 5vh;
+        margin-top: 0;
     }
 
     /* Ensure we follow the intended mobile design w/ a singular page color. */
@@ -133,8 +134,8 @@
         margin-top: 0;
     }
 
-    button#loginModal, button#loginModal2 {
-        padding: 3vh 4vw;
+    button#loginModal, button#loginModal2, #demo {
+        padding: 2vh 4vw;
         font-size: 1.1rem;
     }
 
