--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -116,6 +116,7 @@
         max-width: 100vw;
         box-shadow: none;
         padding: 5vh;
+        padding-bottom: 0;
         margin-top: 0;
     }
 
